cc.warlock.core.script/src/main/antlr/cc/warlock/core/script/wsl/internal/WSLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g 2014-10-29 16:17:58

package cc.warlock.core.script.wsl.internal;
import java.util.ArrayList;
import cc.warlock.core.script.wsl.WSLScript;
import cc.warlock.core.script.wsl.internal.WSLString;
import cc.warlock.core.script.wsl.internal.WSLVariable;
import cc.warlock.core.script.wsl.internal.WSLEqualityCondition.EqualityOperator;
import cc.warlock.core.script.wsl.internal.WSLRelationalCondition.RelationalOperator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class WSLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EOL", "LABEL", "IF", "BLANK", "THEN", "ACTION", "REMOVE", "CLEAR", "WHEN", "INSTANT", "OR", "AND", "EQUAL", "NOTEQUAL", "GT", "LT", "GTE", "LTE", "CONTAINS", "CONTAINSRE", "NOT", "EXISTS", "LPAREN", "RPAREN", "PERCENT", "DOLLAR", "TRUE", "FALSE", "STRING", "QUOTE", "BACKSLASH", "AMP", "VERT", "WS", "LABEL_STRING", "WORD_CHAR", "COMMENT"
    };
    public static final int DOLLAR=29;
    public static final int LT=19;
    public static final int VERT=36;
    public static final int PERCENT=28;
    public static final int INSTANT=13;
    public static final int WORD_CHAR=39;
    public static final int AMP=35;
    public static final int CONTAINS=22;
    public static final int GTE=20;
    public static final int BLANK=7;
    public static final int REMOVE=10;
    public static final int LABEL_STRING=38;
    public static final int NOT=24;
    public static final int AND=15;
    public static final int EOF=-1;
    public static final int TRUE=30;
    public static final int LTE=21;
    public static final int ACTION=9;
    public static final int LPAREN=26;
    public static final int IF=6;
    public static final int CLEAR=11;
    public static final int NOTEQUAL=17;
    public static final int QUOTE=33;
    public static final int RPAREN=27;
    public static final int WS=37;
    public static final int EOL=4;
    public static final int THEN=8;
    public static final int LABEL=5;
    public static final int WHEN=12;
    public static final int CONTAINSRE=23;
    public static final int EQUAL=16;
    public static final int OR=14;
    public static final int GT=18;
    public static final int EXISTS=25;
    public static final int COMMENT=40;
    public static final int FALSE=31;
    public static final int STRING=32;
    public static final int BACKSLASH=34;

    // delegates
    // delegators


        public WSLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public WSLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[145+1];
             
             
        }
        

    public String[] getTokenNames() { return WSLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g"; }


    	private WSLScript script;
    	private int lineNum = 1;
    	private int actionDepth = 0;
    	private IWSLCommand lastCommand = null;
    	public void setScript(WSLScript s) { script = s; }
    	private boolean isNumber(String str) {
    		try {
    			Double.parseDouble(str);
    			return true;
    		} catch(NumberFormatException e) {
    			return false;
    		}
    	}
    	@Override
    	public void reportError(RecognitionException ex) {
    		script.getCommands().debug("Line: " + ex.line + ":" + ex.charPositionInLine + ": " + ex.toString());
    		script.stop();
    	}



    // $ANTLR start "script"
    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:44:1: script : line ( EOL line )* EOF ;
    public final void script() throws RecognitionException {
        int script_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:45:2: ( line ( EOL line )* EOF )
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:45:4: line ( EOL line )* EOF
            {
            pushFollow(FOLLOW_line_in_script62);
            line();

            state._fsp--;
            if (state.failed) return ;
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:45:9: ( EOL line )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==EOL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:45:10: EOL line
            	    {
            	    match(input,EOL,FOLLOW_EOL_in_script65); if (state.failed) return ;
            	    pushFollow(FOLLOW_line_in_script67);
            	    line();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_script71); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, script_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "script"


    // $ANTLR start "line"
    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:48:1: line : (label= LABEL )? (c= expr )? ;
    public final void line() throws RecognitionException {
        int line_StartIndex = input.index();
        Token label=null;
        WSLAbstractCommand c = null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:2: ( (label= LABEL )? (c= expr )? )
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:4: (label= LABEL )? (c= expr )?
            {
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:4: (label= LABEL )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==LABEL) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:5: label= LABEL
                    {
                    label=(Token)match(input,LABEL,FOLLOW_LABEL_in_line85); if (state.failed) return ;

                    }
                    break;

            }

            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:19: (c= expr )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=IF && LA3_0<=VERT)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:49:20: c= expr
                    {
                    pushFollow(FOLLOW_expr_in_line92);
                    c=expr();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            if ( state.backtracking==0 ) {

              			script.addLine(c);
              			if(label != null) {
              				Integer existingLine = script.labelLineNumber((label!=null?label.getText():null));
              				if(existingLine != null)
              					script.getCommands().debug("Redefinition of label \"" + (label!=null?label.getText():null) + "\" on line " + lineNum + ", originally defined on line " + existingLine);
              				script.addLabel((label!=null?label.getText():null), lineNum);
              			}
              			lineNum++;
              		
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, line_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "line"


    // $ANTLR start "expr"
    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:62:1: expr returns [WSLAbstractCommand command] : ( ( IF )=> IF ( BLANK )* cond= conditionalExpression ( BLANK )* THEN ( BLANK )* c= expr | ( ACTION )=> ACTION ( BLANK )* ( ( REMOVE )=> REMOVE ( BLANK )* args= string_list | ( CLEAR )=> CLEAR ( BLANK )* | c= expr WHEN ( BLANK )* args= string_list ) | ( INSTANT )=> INSTANT ( BLANK )* c= expr | args= string_list );
    public final WSLAbstractCommand expr() throws RecognitionException {
        WSLAbstractCommand command = null;
        int expr_StartIndex = input.index();
        IWSLValue cond = null;

        WSLAbstractCommand c = null;

        IWSLValue args = null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return command; }
            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:63:2: ( ( IF )=> IF ( BLANK )* cond= conditionalExpression ( BLANK )* THEN ( BLANK )* c= expr | ( ACTION )=> ACTION ( BLANK )* ( ( REMOVE )=> REMOVE ( BLANK )* args= string_list | ( CLEAR )=> CLEAR ( BLANK )* | c= expr WHEN ( BLANK )* args= string_list ) | ( INSTANT )=> INSTANT ( BLANK )* c= expr | args= string_list )
            int alt13=4;
            alt13 = dfa13.predict(input);
            switch (alt13) {
                case 1 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:63:4: ( IF )=> IF ( BLANK )* cond= conditionalExpression ( BLANK )* THEN ( BLANK )* c= expr
                    {
                    match(input,IF,FOLLOW_IF_in_expr118); if (state.failed) return command;
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:63:14: ( BLANK )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==BLANK) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                    	    {
                    	    match(input,BLANK,FOLLOW_BLANK_in_expr120); if (state.failed) return command;

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    pushFollow(FOLLOW_conditionalExpression_in_expr125);
                    cond=conditionalExpression();

                    state._fsp--;
                    if (state.failed) return command;
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:63:48: ( BLANK )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==BLANK) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                    	    {
                    	    match(input,BLANK,FOLLOW_BLANK_in_expr127); if (state.failed) return command;

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);

                    match(input,THEN,FOLLOW_THEN_in_expr130); if (state.failed) return command;
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:63:60: ( BLANK )*
                    loop6:
                    do {
                        int alt6=2;
                        alt6 = dfa6.predict(input);
                        switch (alt6) {
                    	case 1 :
                    	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                    	    {
                    	    match(input,BLANK,FOLLOW_BLANK_in_expr132); if (state.failed) return command;

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);

                    pushFollow(FOLLOW_expr_in_expr137);
                    c=expr();

                    state._fsp--;
                    if (state.failed) return command;
                    if ( state.backtracking==0 ) {

                      			command = new WSLCondition(lineNum, script, cond, c);
                      		
                    }

                    }
                    break;
                case 2 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:67:4: ( ACTION )=> ACTION ( BLANK )* ( ( REMOVE )=> REMOVE ( BLANK )* args= string_list | ( CLEAR )=> CLEAR ( BLANK )* | c= expr WHEN ( BLANK )* args= string_list )
                    {
                    match(input,ACTION,FOLLOW_ACTION_in_expr151); if (state.failed) return command;
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:67:22: ( BLANK )*
                    loop7:
                    do {
                        int alt7=2;
                        alt7 = dfa7.predict(input);
                        switch (alt7) {
                    	case 1 :
                    	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                    	    {
                    	    match(input,BLANK,FOLLOW_BLANK_in_expr153); if (state.failed) return command;

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    if ( state.backtracking==0 ) {
                       actionDepth++; 
                    }
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:68:3: ( ( REMOVE )=> REMOVE ( BLANK )* args= string_list | ( CLEAR )=> CLEAR ( BLANK )* | c= expr WHEN ( BLANK )* args= string_list )
                    int alt11=3;
                    alt11 = dfa11.predict(input);
                    switch (alt11) {
                        case 1 :
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:68:5: ( REMOVE )=> REMOVE ( BLANK )* args= string_list
                            {
                            match(input,REMOVE,FOLLOW_REMOVE_in_expr167); if (state.failed) return command;
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:68:23: ( BLANK )*
                            loop8:
                            do {
                                int alt8=2;
                                alt8 = dfa8.predict(input);
                                switch (alt8) {
                            	case 1 :
                            	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                            	    {
                            	    match(input,BLANK,FOLLOW_BLANK_in_expr169); if (state.failed) return command;

                            	    }
                            	    break;

                            	default :
                            	    break loop8;
                                }
                            } while (true);

                            if ( state.backtracking==0 ) {
                               actionDepth--; 
                            }
                            pushFollow(FOLLOW_string_list_in_expr176);
                            args=string_list();

                            state._fsp--;
                            if (state.failed) return command;
                            if ( state.backtracking==0 ) {

                              				command = new WSLActionRemove(lineNum, script, args);
                              			
                            }

                            }
                            break;
                        case 2 :
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:72:5: ( CLEAR )=> CLEAR ( BLANK )*
                            {
                            match(input,CLEAR,FOLLOW_CLEAR_in_expr192); if (state.failed) return command;
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:72:21: ( BLANK )*
                            loop9:
                            do {
                                int alt9=2;
                                int LA9_0 = input.LA(1);

                                if ( (LA9_0==BLANK) ) {
                                    alt9=1;
                                }


                                switch (alt9) {
                            	case 1 :
                            	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                            	    {
                            	    match(input,BLANK,FOLLOW_BLANK_in_expr194); if (state.failed) return command;

                            	    }
                            	    break;

                            	default :
                            	    break loop9;
                                }
                            } while (true);

                            if ( state.backtracking==0 ) {

                              				command = new WSLActionClear(lineNum, script);
                              				actionDepth--;
                              			
                            }

                            }
                            break;
                        case 3 :
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:77:5: c= expr WHEN ( BLANK )* args= string_list
                            {
                            pushFollow(FOLLOW_expr_in_expr208);
                            c=expr();

                            state._fsp--;
                            if (state.failed) return command;
                            match(input,WHEN,FOLLOW_WHEN_in_expr210); if (state.failed) return command;
                            // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:77:17: ( BLANK )*
                            loop10:
                            do {
                                int alt10=2;
                                alt10 = dfa10.predict(input);
                                switch (alt10) {
                            	case 1 :
                            	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                            	    {
                            	    match(input,BLANK,FOLLOW_BLANK_in_expr212); if (state.failed) return command;

                            	    }
                            	    break;

                            	default :
                            	    break loop10;
                                }
                            } while (true);

                            if ( state.backtracking==0 ) {
                               actionDepth--; 
                            }
                            pushFollow(FOLLOW_string_list_in_expr219);
                            args=string_list();

                            state._fsp--;
                            if (state.failed) return command;
                            if ( state.backtracking==0 ) {

                              				// FIXME: Variables in actions can't be "when"
                              				command = new WSLAction(lineNum, script, c, args);
                              			
                            }

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:83:4: ( INSTANT )=> INSTANT ( BLANK )* c= expr
                    {
                    match(input,INSTANT,FOLLOW_INSTANT_in_expr238); if (state.failed) return command;
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:83:24: ( BLANK )*
                    loop12:
                    do {
                        int alt12=2;
                        alt12 = dfa12.predict(input);
                        switch (alt12) {
                    	case 1 :
                    	    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:0:0: BLANK
                    	    {
                    	    match(input,BLANK,FOLLOW_BLANK_in_expr240); if (state.failed) return command;

                    	    }
                    	    break;

                    	default :
                    	    break loop12;
                        }
                    } while (true);

                    pushFollow(FOLLOW_expr_in_expr245);
                    c=expr();

                    state._fsp--;
                    if (state.failed) return command;
                    if ( state.backtracking==0 ) {

                      			command = c;
                      			command.setInstant(true);
                      		
                    }

                    }
                    break;
                case 4 :
                    // /home/sproctor/git/warlock2/cc.warlock.core.script/src/main/cc/warlock/core/script/wsl/WSL.g:88:4: args= string_list
                    {
                    pushFollow(FOLLOW_string_list_in_expr256);
                    args=string_list();

                    state._fsp--;
                    if (state.failed) return command;
                    if ( state.backtracking==0 ) {
